plugins {
    id "io.freefair.lombok" version "9.5.0"
    id "com.vanniktech.maven.publish" version "0.37.0"
    id "com.github.ben-manes.versions" version "0.54.0"
    id "net.ltgt.errorprone" version "5.1.0"
}

apply plugin: "java-library"
apply plugin: "jacoco"

group = "nl.colorize"
version = "2026.4"
compileJava.options.encoding = "UTF-8"

java {
    sourceCompatibility = "25"
    targetCompatibility = "25"
    sourceSets.main.java.srcDirs = ["source"]
    sourceSets.main.resources.srcDirs = ["resources"]
    sourceSets.test.java.srcDirs = ["test"]
}

repositories {
    mavenCentral()
    maven {
        url = "https://jitpack.io"
    }
}

dependencies {
    implementation "com.badlogicgames.gdx:gdx:1.14.2"
    implementation "com.badlogicgames.gdx:gdx-platform:1.14.2:natives-desktop"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:1.14.2"
    implementation "com.badlogicgames.gdx:gdx-freetype:1.14.2"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:1.14.2:natives-desktop"
    implementation("com.badlogicgames.gdx:gdx-tools:1.14.2") {
        exclude group: "org.lwjgl.lwjgl"
    }
    
    implementation "org.teavm:teavm-jso:0.14.1"
    implementation "org.teavm:teavm-jso-apis:0.14.1"
    implementation "org.teavm:teavm-classlib:0.14.1"
    implementation "org.teavm:teavm-tooling:0.14.1"

    implementation "com.github.xpenatan.gdx-teavm:backend-web:1.5.6"
    implementation "com.github.xpenatan.gdx-teavm:gdx-freetype-teavm:1.5.6"

    implementation "io.github.humbleui:skija-macos-x64:0.143.17"
    implementation "io.github.humbleui:skija-macos-arm64:0.143.17"
    implementation "io.github.humbleui:skija-windows-x64:0.143.17"

    implementation "nl.colorize:colorize-java-commons:2026.3"
    implementation "com.github.mgsx-dev.gdx-gltf:gltf:2.3.0"
    implementation "org.slf4j:slf4j-jdk14:2.0.17"
    testImplementation "org.junit.jupiter:junit-jupiter:6.1.1"
    testImplementation "com.tngtech.archunit:archunit-junit5:1.4.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    errorprone "com.google.errorprone:error_prone_core:2.50.0"
}

javadoc {
    exclude "**/java2d/**", "**/libgdx/**", "**/jfx/**", "**/teavm/**", "**/skija/**", "**/headless/**"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    afterEvaluate {
        classDirectories.from = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ["**/renderer/*/*", "**/*Demo*"])
        })
    }
}

task coverage(dependsOn: ["test", "jacocoTestReport"]) {
    doLast {
        def report = file("${buildDir}/reports/jacoco/test/html/index.html").text
        def loc = (report =~ "tfoot.*?bar.*?>[\\d,]+ of ([\\d,]+).*?tfoot")[0][1].replace(",", "")
        def coverage = (report =~ "tfoot.*?ctr2.*?>([\\d.]+)%.*?tfoot")[0][1]
        println "-" * 40
        println "Lines of code:    ${loc}"
        println "Test coverage:    ${coverage}%"
        file("${buildDir}/reports/coverage.yaml").text = "loc: ${loc}\ncoverage: ${coverage}\n"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone.allErrorsAsWarnings = true
    options.errorprone.disable("EffectivelyPrivate")
    options.errorprone.disable("FormatStringShouldUsePlaceholders")
    options.errorprone.disable("JavaUtilDate")
    options.errorprone.disable("InlineMeSuggester")
    options.errorprone.disable("StringCaseLocaleUsage")
    options.errorprone.disable("ThreadPriorityCheck")
}

task transpileDemoApplication2D(type: JavaExec, dependsOn: jar) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "nl.colorize.multimedialib.tool.TeaVMTranspilerTool"
    args "--project", "MultimediaLib-TeaVM-Demo2D",
         "--resources", "resources",
         "--out", "${buildDir}/browserdemo2d",
         "--main", "nl.colorize.multimedialib.tool.TeaDemoLauncher",
         "--meta", "demo:2d"
}

task transpileDemoApplication3D(type: JavaExec, dependsOn: jar) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "nl.colorize.multimedialib.tool.TeaVMTranspilerTool"
    args "--project", "MultimediaLib-TeaVM-Demo3D",
         "--resources", "resources",
         "--out", "${buildDir}/browserdemo3d",
         "--main", "nl.colorize.multimedialib.tool.TeaDemoLauncher",
         "--meta", "demo:3d"
}

mavenPublishing {
    coordinates("nl.colorize", "multimedialib", version)
    
    pom {
        name = "MultimediaLib"
        description = "Build multimedia applications that support desktop, mobile, and web."
        url = "https://www.clrz.nl"
        inceptionYear = "2009"
        licenses {
            license {
                name = "The Apache License, Version 2.0"
                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
            }
        }
        developers {
            developer {
                id = "colorize"
                name = "Colorize"
                url = "https://clrz.nl"
            }
        }
        scm {
            url = "https://github.com/colorizenl/multimedialib"
            connection = "scm:git:https://github.com/colorizenl/multimedialib.git"
            developerConnection = "scm:git:https://github.com/colorizenl/multimedialib.git"
        }
    }
}
